<resources>
    <string name="app_name" translatable="false">Curuza</string>
    <string name="Home_activity">Home</string>
    <string name="products_activity">Products</string>
    <string name="documents_activity">Documents</string>
    <string name="stock_activity">Stock</string>
    <string name="credit_activity">Credits</string>
    <string name="depense_activity">Expenses</string>
    <string name="rapport_activity">Reports</string>
    <string name="client_activity">Customers</string>
    <string name="question_activity">Question or Suggestion</string>
    <string name="credit_detail">Credit Detail</string>
    <string name="article_detail">Article Detail</string>
    <string name="client_detail">Customer Detail</string>
    <string name="sell_article_detail">Client Detail</string>
    <string name="uploading_product_photo">Uploading product photo...</string>
    <string name="depense_detail">Expenses Detail</string>
    <string name="add_client">Add Customer</string>
    <string name="add_fournisseur">Add Supplier</string>
    <string name="fournisseur_detail">Supplier Detail</string>
    <string name="entree_activity">INCOMING</string>
    <string name="sortie_activity">OUTGOING</string>
    <string name="quantity_dialog">Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="submit">Validate</string>
    <string name="sell_article">Sell Article</string>
    <string name="Upload_picture">Upload Image</string>
    <string name="nom">Name</string>
    <string name="validate">Validate</string>
    <string name="description">Description</string>
    <string name="quantite">Quantity</string>
    <string name="prix_achat">Purchasing Price</string>
    <string name="prix_vente">Selling Price</string>
    <string name="telephone_number">Phone Number</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">kazetechnologies16@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="invalid_picture">invalidate picture</string>
    <string name="check_evrything">check evrything</string>
    <string name="language">Kirundi</string>
    <string name="about_activity">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="action_more">more</string>
    <string name="add_credit">Add Credit</string>
    <string name="subscription_activity">Subscription</string>
    <string name="settings_activity">Settings</string>
    <string name="help_activity">Help</string>
    <string name="share_activity">Share</string>
    <string name="add_article">Add Article</string>
    <string name="fournisseur_activity">Suppliers</string>
    <string name="action_search">Search</string>
    <string name="vendu_item">Sold</string>
    <string name="add_depense">Add Expense</string>
    <string name="Tous_activity">All</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="amount">Amount</string>
    <string name="selectedlanguage">English</string>
    <string name="BIF">BIF</string>
    <string name="stock_detail">Stock Detail</string>
    <string name="share_playstore">On Google Play Store</string>
    <string name="share_header_intent">Share with your Friends  Curuza Application</string>
    <string name="extra_msg_link">Curuza is the App that  help you to manage your business.</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b>Resend</b></string>
    <string name="too_many_verification_attempts_erro">You\\\'ve reached the maximum verification attempts allowed. Please try again later.</string>
    <string name="network_unavailable_error">Network unavailable. Please check your internet connection and try again.</string>
    <string name="resend_sms_without_timer">&lt;u>Resend SMS&lt;/u></string>
    <string name="phone_number_verification_instructions">An SMS was sent to &lt;b>%1$s&lt;/b>. Please enter the verification code below.</string>
    <string name="resend_sms_with_timer">Resend SMS (%1$s)</string>
    <string name="no_password_entered">no password_entered</string>
    <string name="invalid_password_entered">invalid password entered</string>
    <string name="no_confirmation_password_entered">no confirmation password entered</string>
    <string name="confirmation_password_mismatch">confirmation password mismatch</string>
    <string name="continue_">continue</string>
    <string name="creating_new_account">creating new account</string>
    <string name="request_unsuccessful">request unsuccessful</string>
    <string name="incorrect_credentials">incorrect credentials</string>
    <string name="enter_a_password">enter a password</string>
    <string name="enter_valid_password">enter valid password</string>
    <string name="uploading_profile_picture">uploading profile picture</string>
    <string name="profile_photo_prompt_title">profile photo prompt title</string>
    <string name="profile_photo_prompt_body">profile photo prompt body</string>
    <string name="verify_phone_number_body_1">verify phone number</string>
    <string name="edit_number">edit number</string>
    <string name="it_s_correct">it\'s correct</string>
    <string name="verify_phone_number">verify phone number</string>
    <string name="later">later</string>
    <string name="yes">yes</string>
    <string name="please_wait">please wait</string>
    <string name="too_many_verification_attempts_error" />
    <string name="English">English</string>
    <string name="kirundi">kirundi</string>
    <string name="French">French</string>
    <string name="swahili">Swahili</string>
    <string name="choose_language">Choose Language</string>
    <string name="list_product" translatable="false">Exporter vers Excel</string>
    <string name="share_list_product">Share</string>
    <string name="export_vers_excel">export vers excel</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="open_gallery_first_line">Open</string>
    <string name="open_gallery_second_line">gallery</string>
    <string name="remove_photo_first_line">Remove</string>
    <string name="remove_photo_second_line">photo</string>
    <string name="take_photo_first_line">Take</string>
    <string name="take_photo_second_line">photo</string>
    <string name="uploading_profile_photo">Uploading Profile Picture</string>
    <string name="removing_profile_photo">Removing Profile Picture</string>
    <string name="copyright_line">&#169; 2023 Kaze Technologies sprl</string>
    <string name="about_text">Curuza is the App that  help you to manage your business, made by Burundians, for Burundians. \n\nOur vision is to help  businesses owner to manage their business, with a new modern and easy way to track their products.</string>
</resources>