<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="Exporter vers Excel"
        app:showAsAction="never" >

        <menu>
            <item
                android:id="@+id/all"
                android:title="@string/Tous_activity"/>
            <item
                android:id="@+id/enter"
                android:title="@string/entree_activity"/>
            <item
                android:id="@+id/exit"
                android:title="@string/sortie_activity"/>
        </menu>
    </item>
    <item
        android:id="@+id/share_list_documents"
        android:icon="@drawable/ic_baseline_share_modifie"
        android:title="@string/share_list_product"
        app:showAsAction="never" />
<!--    <item
        android:id="@+id/list_product"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="aide"
        app:showAsAction="never" />-->


</menu>