<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp">

    <ImageView
        android:id="@+id/pict_people"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_shopping_basket_green" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/add_quantity"
        android:padding="10dp" />

    <EditText
        android:id="@+id/quantiti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/quantity_dialog"
        android:padding="10dp" />

    <EditText
        android:id="@+id/total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/total_amount"
        android:padding="10dp" />


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/submit" />




</LinearLayout>
