<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/Header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/choose_language"
        android:drawableLeft="@drawable/ic_baseline_language_24"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="12dp"
        android:layout_marginLeft="24dp" />

    <View
        android:background="#40000000"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <TextView
        android:id="@+id/kirundi"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:layout_height="wrap_content"
        android:text="@string/kirundi"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingLeft="24dp" />

    <View
        android:background="#40000000"
        android:layout_width="match_parent"
        android:layout_height="1px" />
    <TextView
        android:id="@+id/swahili"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:layout_height="wrap_content"
        android:text="@string/swahili"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingLeft="24dp" />
    <View
        android:background="#40000000"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <TextView
        android:id="@+id/french"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:layout_height="wrap_content"
        android:text="@string/French"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingLeft="24dp" />

    <View
        android:background="#40000000"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:text="@string/English"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingLeft="24dp" />
</LinearLayout>