<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottom_sheet_title"
        style="@style/Header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_photo" />

    <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/take_photo_container"
            android:layout_width="100dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/camera_icon"
                android:background="@drawable/fundraiser_cover_photo_option_bg"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="12dp"
                android:layout_marginBottom="4dp"
                app:srcCompat="@drawable/ic_photo_camera_2_24dp"
                app:tint="@color/colorPrimaryLight2" />

            <TextView
                android:id="@+id/camera_title_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/take_photo_first_line"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/camera_title_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/take_photo_second_line"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/open_gallery_container"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gallery_icon_container"
                android:background="@drawable/fundraiser_cover_photo_option_bg"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="12dp"
                android:layout_marginBottom="4dp"
                app:srcCompat="@drawable/ic_gallery_24dp"
                app:tint="@color/colorPrimaryLight2" />

            <TextView
                android:id="@+id/gallery_title_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/open_gallery_first_line"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/gallery_title_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/open_gallery_second_line"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/remove_photo_container"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/remove_photo_icon"
                android:background="@drawable/fundraiser_cover_photo_option_bg"
                app:backgroundTint="@color/darkest_red"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="12dp"
                android:layout_marginBottom="4dp"
                app:srcCompat="@drawable/ic_trash_can_24dp"
                app:tint="@color/darkest_red" />

            <TextView
                android:id="@+id/remove_photo_title_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/remove_photo_first_line"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/remove_photo_title_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/remove_photo_second_line"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>